src/test/ui/nll/user-annotations/adt-nullary-enums.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:33:41
   |
LL |         SomeEnum::SomeVariant(Cell::new(&c)),
   |                                         ^^ borrowed value does not live long enough
LL |         SomeEnum::SomeOtherVariant::<Cell<&'static u32>>,
   |         ------------------------------------------------ type annotation requires that `c` is borrowed for `'static`
LL |     );
LL | }
   | - `c` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/adt-nullary-enums.rs:34:9
   |
LL |         SomeEnum::SomeOtherVariant::<Cell<&'static u32>>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:41:41
   |
LL | fn annot_reference_named_lifetime<'a>(_d: &'a u32) {
   |                                   -- lifetime `'a` defined here
...
LL |         SomeEnum::SomeVariant(Cell::new(&c)),
   |                                         ^^ borrowed value does not live long enough
LL |         SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
   |         ------------------------------------------- type annotation requires that `c` is borrowed for `'a`
LL |     );
LL | }
   | - `c` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/adt-nullary-enums.rs:42:9
   |
LL |         SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `c` does not live long enough
  --> $DIR/adt-nullary-enums.rs:54:45
   |
LL | fn annot_reference_named_lifetime_in_closure<'a>(_: &'a u32) {
   |                                              -- lifetime `'a` defined here
LL |     let _closure = || {
   |                     - `c` dropped here while still borrowed
...
LL |             SomeEnum::SomeVariant(Cell::new(&c)),
   |                                             ^^ borrowed value does not live long enough
LL |             SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
   |             ------------------------------------------- type annotation requires that `c` is borrowed for `'a`
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/adt-nullary-enums.rs:55:13
   |
LL |             SomeEnum::SomeOtherVariant::<Cell<&'a u32>>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0597`.
